# jaeger-app

./: README.md  pyproject.toml
database/: docker-compose.dev.yml  docker.env
jaeger_app/: settings.py
worker/: admin.py  apps.py  models.py
